--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "reactjs-stylesheet": "^1.0.9",
+    "stylesheet": "^0.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
